- Вместо количества товаров нужно указывать промежуток с мин. и макс. количеством. - В правиле нужно указывать товары 2 типов: мин. число которых больше 0(обязательные) и число которых больше либо равно 0(необязательные) - Для необязательных товаров нужно писать функцию предварительной обработки. - 3 из 4 тестов работают(остался только тест для скидки на товары любых типов)